@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.cloudhoist</groupId>
     <artifactId>pallet-pom</artifactId>
-    <version>0.4.2-SNAPSHOT</version>
+    <version>0.4.3-SNAPSHOT</version>
     <relativePath />
   </parent>
   <groupId>org.cloudhoist</groupId>
@@ -27,6 +27,8 @@
 
     <!-- The standalone module packages all other modules. -->
     <module>pallet-crates-standalone</module>
+
+    <module>pallet-crates-test</module>
 
     <module>automated-admin-user</module>
     <module>bzr</module>
@@ -120,6 +122,7 @@
       <groupId>swank-clojure</groupId>
       <artifactId>swank-clojure</artifactId>
       <optional>true</optional>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>vmfest</groupId>
@@ -141,7 +144,47 @@
     <dependencies>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>pallet-crates-test</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>automated-admin-user</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>bzr</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>cassandra</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>chef</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>cloudkick</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>couchdb</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>crontab</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>cruise-control-rb</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -156,7 +199,37 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>ganglia</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>git</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>github</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>gpg</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>haproxy</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>hudson</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>iozone</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -171,7 +244,17 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>jetty</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>maven</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>monit</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -191,6 +274,16 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>nginx</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>node-js</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>package-builder</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
@@ -201,7 +294,32 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>postfix</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>postgres</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>public-dns-if-no-nameserver</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>rabbitmq</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>resolv</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>ruby</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -216,6 +334,21 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>sphinx</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>splunk</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>squeak</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>ssh</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
@@ -226,7 +359,17 @@
       </dependency>
       <dependency>
         <groupId>org.cloudhoist</groupId>
+        <artifactId>squid</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
         <artifactId>sudoers</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>syslog-ng</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -237,6 +380,26 @@
       <dependency>
         <groupId>org.cloudhoist</groupId>
         <artifactId>upstart</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>vpnc</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>wordpress</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>zeromq</artifactId>
+        <version>0.5.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.cloudhoist</groupId>
+        <artifactId>zookeeper</artifactId>
         <version>0.5.0-SNAPSHOT</version>
       </dependency>
     </dependencies>
@@ -260,6 +423,7 @@
           <groupId>com.theoryinpractise</groupId>
           <artifactId>clojure-maven-plugin</artifactId>
           <configuration>
+            <clojureOptions>-Xmx1024m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
           </configuration>
           <executions>
             <execution>
